manifest/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tickethub
    tier: frontend
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tickethub
      tier: frontend
  template:
    metadata:
      labels:
        app: tickethub
        tier: frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: tier
                  operator: In
                  values:
                  - frontend
      containers:
        - image: 814835082161.dkr.ecr.ap-northeast-2.amazonaws.com/tickethub-frontend:latest
          name: frontend-container
          ports:
          - containerPort: 3000
