manifest/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tickethub
    tier: frontend
  name: frontend-service
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: tickethub
    tier: frontend
