manifest/frontend/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing                                    
    alb.ingress.kubernetes.io/subnets: subnet-0a72f1ae00d5a4a50,subnet-0b80f7c3b7ac76844 # public subnet에 위치
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-frontend-service
            port:
              number: 80
